Final code with 100% coverage and SonarQube clean